--- a/revisao3b/revisao3b.csproj
+++ b/revisao3b/revisao3b.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caminhao.cs" />
+    <Compile Include="Carro.cs" />
+    <Compile Include="IVeículo.cs" />
     <Compile Include="Pessoa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
